logs/Clipper.log
===== BUILD LOG FOR Clipper =====
Mo 14 Apr 2025 20:38:08 CEST

-- The C compiler identification is GNU 5.4.1
-- The CXX compiler identification is GNU 5.4.1
-- The ASM compiler identification is GNU
-- Found assembler: /Users/maxi/code/repos/prologue-fx/tools/gcc/gcc-arm-none-eabi-5_4-2016q3/bin/arm-none-eabi-gcc
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /Users/maxi/code/repos/prologue-fx/tools/gcc/gcc-arm-none-eabi-5_4-2016q3/bin/arm-none-eabi-gcc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /Users/maxi/code/repos/prologue-fx/tools/gcc/gcc-arm-none-eabi-5_4-2016q3/bin/arm-none-eabi-g++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done (1.3s)
-- Generating done (0.0s)
-- Build files have been written to: /Users/maxi/code/repos/prologue-fx/fx/Clipper/build
[ 16%] 🔄 Updating manifest to FX type 'delfx'
[ 16%] Built target update_manifest
[ 33%] Building CXX object CMakeFiles/Clipper.dir/Users/maxi/code/repos/prologue-fx/shared/main.cpp.obj
[ 50%] Building C object CMakeFiles/Clipper.dir/Users/maxi/code/repos/prologue-fx/shared/tpl/_unit.c.obj
/Users/maxi/code/repos/prologue-fx/shared/tpl/_unit.c:139:6: error: conflicting types for '_hook_process'
 void _hook_process(const float *main_xn, float *main_yn,
      ^
In file included from /Users/maxi/code/repos/prologue-fx/shared/tpl/_unit.c:47:0:
/Users/maxi/code/repos/prologue-fx/fx/Clipper/../../shared/inc/userdelfx.h:153:8: note: previous declaration of '_hook_process' was here
   void _hook_process(float *xn, uint32_t frames);
        ^
make[2]: *** [CMakeFiles/Clipper.dir/Users/maxi/code/repos/prologue-fx/shared/tpl/_unit.c.obj] Error 1
make[1]: *** [CMakeFiles/Clipper.dir/all] Error 2
make: *** [all] Error 2
